--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap-icons==0.8.1
 django-bootstrap-v5==1.0.11
 idna==3.4
 mysqlclient==2.1.1
+Pillow==9.3.0
 requests==2.28.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
